# autoresearch

./: .gitignore  EXPLAIN.md  IMPLEMENTATION.md  MODULES.md  QUICKSTART.md  README.md  SETUP.md  SIMULATOR.md  SIMULATOR_INTEGRATION.md  SUPPLY_CHAIN_SECURITY.md  TRAINING_INTEGRATION.md  analysis_donkey.ipynb  donkeycar_plan.md  export_donkey.py  prepare_donkey.py  program_donkey.md  pyproject.toml  sim_setup.md  train.py  train_donkey.py  wroscoe_comparison.md
.github/agents/: bmad.agent.md
.github/workflows/: ci.yml  docker-publish.yml
BMAD/_bmad/_config/: files-manifest.csv  manifest.yaml
BMAD/_bmad/_memory/: config.yaml
BMAD/_bmad/bmb/: config.yaml
BMAD/_bmad/bmm/: config.yaml
BMAD/_bmad/cis/: config.yaml
BMAD/_bmad/core/: config.yaml
BMAD/_bmad/gds/: config.yaml
BMAD/_bmad/tea/: config.yaml
BMAD/_bmad/wds/: config.yaml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_config/ides/: codex.yaml  (+5 more)
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
configs/: environment.yaml  evaluation.yaml  experiment.yaml  promotion.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
examples/systemd/: autoresearch.service
src/autoresearch/: __init__.py  artifacts.py  cli.py  config.py  evaluate.py  export.py  logging_config.py  orchestrate.py  preflight.py  promote.py  state.py  training.py
tests/: test_e2e.py  test_integration.py  test_production.py  test_state_machine.py  test_units.py
(+5 files in other folders)
